# shrunk

./: .env.example  .eslintrc.js  .gitattributes  .gitignore  .gitlab-ci.yml  .prettierrc  .pylintrc  CHANGELOG.md  CONTRIBUTE.md  Gruntfile.js  Jenkinsfile  LICENSE.txt  MANIFEST.in  Makefile  Procfile  README.md  README.rst  build_docs.sh  docker-compose.tests.yml  docker-compose.yml  linktree.md  package-lock.json  package.json  pip.req  pip.req.dev  run.sh  setup.cfg  setup.py  setup.sh  tsconfig.json  upgrade.html  webpack.config.js
.sass-cache/93ee6ed27cbba62d173270cac1d6c07692eefbfa/: importer.scssc
.sass-cache/96b01e08cd9859eaef8bcdd23a5bd0ff0eff78a0/: imports.scssc  main.scssc  reset.scssc
backend/: .pylintrc  Dockerfile  MANIFEST.in  migrate-mongo-config.js  mkdocs.yml  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  start.sh  tailwind.config.js
backend/doc/: backend_tutorial.rst  build_instructions.rst  conf.py  frontend_tutorial.rst  packaging.rst
backend/doc/api/: shrunk.client.rst  shrunk.roles.rst  shrunk.util.rst
backend/migrations/: 20200922185342-tracking-ids.js  20200922215014-multiple_aliases.js  20201125192203-orgsv2_alerts.js
backend/scripts/: README  add_tracking_ids.py  admin2power.js  build-tailwindcss.sh  endpoint_stats.py  install-tailwindcss.sh  listen.js  migrate_multiple_aliases.py  outlook_extension_updater  phishMongod.py  update_schema.js  userlist.js
backend/scripts/add-geoip/: CHANGELOG.md
backend/scripts/chk-mongo-cgi/chk-mongo-cgi/: connections
backend/scripts/update-scripts/: update_schema.js
backend/shrunk/: __init__.py  ci-test-config.py  config.py  config.py.example  configy.py.example  dev_logins.py  linkhub_viewer.py  local-test-config.py  sso.py  views.py
backend/shrunk/api/: __init__.py  admin.py  alert.py  link.py  linkhub.py  motd.py  org.py  position.py  request.py  role.py  role_request.py  search.py  security.py  ticket.py  user.py
backend/shrunk/api/v1/: linkv1.py  orgv1.py  trackingpixelv1.py  userv1.py
backend/shrunk/client/: __init__.py  access_token.py  aggregations.py  alerts.py  exceptions.py  geoip.py  linkhub.py  links.py  orgs.py  positions.py  role_requests.py  roles.py  search.py  security.py  tickets.py  tracking.py  users.py
backend/shrunk/static/css/: geist.css  static.css
backend/shrunk/static/data/: contributors.json  release_notes.json
backend/shrunk/static/html/tickets/: closed.html  confirmation.html  notification.html  resolution.html
backend/shrunk/static/txt/tickets/: closed.txt  confirmation.txt  notification.txt  resolution.txt
backend/shrunk/templates/: 404.html  access_request_resolved.html  base.html  help_no_2fa.html  index.html  login.html  macros.html
backend/shrunk/templates/html/role_requests/: approval.html  confirmation.html  denial.html  notification.html
backend/shrunk/templates/html/tickets/: resolution.html
backend/shrunk/templates/txt/role_requests/: approval.txt  confirmation.txt  denial.txt  notification.txt
backend/shrunk/templates/txt/tickets/: confirmation.txt  resolution.txt
backend/shrunk/util/: __init__.py  decorators.py  github.py  ldap.py  stats.py  string.py  verification.py
backend/shrunk/util/testing/: github.py
backend/tests/: README.md  conftest.py  test_api_admin.py  test_api_link.py  test_api_misc.py  test_api_org.py  test_api_position.py  test_api_role.py  test_api_role_request.py  test_api_search.py  test_api_security.py  test_api_ticket.py  test_api_tracking_pixel.py  test_api_user.py  test_db.py  test_pages_user.py  test_tracking.py  test_util_stat.py  test_util_string.py  util.py
doc/: backend_tutorial.rst  conf.py  frontend_tutorial.rst  index.rst  installation.rst  tutorial.rst
doc/api/: index.rst  shrunk.client.rst  shrunk.rst  shrunk.util.rst
docs/: build-instructions.md  build.sh  build_instructions.rst  conf.py  deploy.md  index.rst  requirements.txt
docs/api/: shrunk.api.rst  shrunk.rst
docs/old-docs/: packaging.rst
documentation/: conf.py  index.rst  installation.rst  tutorial.rst
documentation/api/: appserver.rst  client.rst  filters.rst  forms.rst  index.rst  linkserver.rst  user.rst  util.rst
frontend/: .babelrc  .eslintignore  .eslintrc  .eslintrc.js  .lessrc  Dockerfile  components.json  description.txt  docs.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  typedoc.json  typedocRunner.ts  vite.config.ts
frontend/scripts/: fix-antd-table.js
frontend/src/: Admin.tsx  AdminStats.tsx  Base.css  Base.less  CreateLinkForm.tsx  Csv.tsx  Dashboard.tsx  EditLinkModal.tsx  Faq.less  Faq.tsx  FixAliasRemoveButton.less  LinkInfo.tsx  LinkRow.less  LinkRow.tsx  ManageOrg.tsx  OrgCommon.tsx  OrgStats.tsx  Orgs.tsx  PendingRequests.less  PendingRequests.tsx  QrCode.tsx  Role.tsx  SearchBox.tsx  Shrunk.css  Shrunk.less  Shrunk.tsx  Stats.tsx  StatsCommon.tsx  Validators.tsx  antd_themed.less  index.css  index.tsx  (+6 more)
httpd/: .htaccess  httpd.conf
scripts/: add_tracking_ids.py  admin2power.js  backup.sh  base.sh  check_http_adaptor  check_mongodb  endpoint_stats.py  listen.js  phishMongod.py  shrunkdb-backup.sh  userlist.js
shrunk/: MANIFEST.in  Makefile  __init__.py  aggregations.py  app.py  app_decorate.py  appserver.py  client.py  config.py.example  context_processors.py  csrf.py  decorators.py  dev_logins.py  filters.py  forms.py  linkserver.py  models.py  orgs.py  roles.py  schema.py  setup.py  shrunk_client.py  sso.py  stats.py  statutil.py  stringutil.py  test-config.py  user.py  util.py  webpack_loader.py
shrunk/scripts/add-geoip/: add-geoip.cabal  cabal.project
shrunk/scripts/add-geoip/src/: Main.hs
shrunk_test/: Makefile  setup.cfg  setup.py
test/: README.md  pip.req  test_db.py  test_pages_load.py  test_pages_user.py  test_roles.py  test_statutil.py  test_stringutil.py  views.py
tests/: conftest.py  fixtures.py  pip.req  test_db.py  test_filters.py  test_orgs.py  test_pages_load.py  test_pages_user.py  test_roles.py  test_roles_views.py  test_search.py  test_util_stat.py  test_util_string.py  util.py
(+364 files in other folders)
