[tool.poetry]
name = "shrunk"
version = "2.4.7"
# readme = "../README.md"  # THIS HAS BEEN REPORTED TO THE POETRY DEVELOPMENT TEAM: https://github.com/python-poetry/poetry/issues/9488
description = "URL Shortener for Rutgers University"
repository = "https://github.com/oss/shrunk"
authors = ["Rutgers Open System Solutions <oss@oit.rutgers.edu>"]
license = "MIT"
maintainers = ["Andrew Hong <ah1371@oit.rutgers.edu>"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
]

include = [
    { path = "shrunk/**/*.py" },
    { path = "shrunk/static/img/*.ico" },
    { path = "shrunk/static/img/*.png" },
    { path = "shrunk/static/dist/*.js" },
    { path = "shrunk/static/dist/*.css" },
    { path = "shrunk/static/dist/*.html" },
    { path = "shrunk/templates/*.html" },
    { path = "shrunk/static/webpack-stats.json" },
]
exclude = ["shrunk/config.py", "shrunk/test-config.py"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "1.1.2"
flask-sso = "0.4.0"
flask-mailman = "0.1.7"
jinja2 = "2.11.3"
markupsafe = "1.1.1"
werkzeug = "1.0.1"
itsdangerous = "1.1.0"
pymongo = "3.11.0"
geoip2 = "2.9.0"
httpagentparser = "1.9.0"
click = "7.0"
python-ldap = "^3.4.4"
jsonschema = "3.2.0"
backports-datetime-fromisoformat = "1.0.0"
six = "^1.16.0"
requests = "2.17.3"                        # Do not change this version, you will have build issues if you do.
backports_datetime_fromisoformat = "1.0.0" # Do not change this version, you will have build issues if you do.
segno = "^1.6.1"
pillow = "8.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
strict_equality = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
allow_redefinition = false
pretty = true
show_column_numbers = true
show_error_context = true

[tool.pytest]
addopts = "--cov=shrunk --verbose -m 'not slow'"
console_output_style = "count"
testpaths = ["tests"]

[tool.flake8]
ignore = ["C812", "C813", "C814", "C815", "C816"]
max-line-length = 120
select = ["Q0", "C", "PT"]
inline-quotes = '"'
