[project]
name = "shrunk"
version = "3.2.1"
description = "URL Shortener for Rutgers University"
authors = [{ name = "Rutgers Open System Solutions", email = "oss@oit.rutgers.edu" }]
requires-python = ">=3.14"
license = "MIT"
maintainers = [{ name = "Andrew Hong", email = "ah1371@oit.rutgers.edu" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Private :: Do not Upload",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "flask>=3.1.3",
    "flask-sso>=0.4.0",
    "flask-mailman>=1.1.1",
    "jinja2>=3.1.6",
    "werkzeug>=3.1.8",
    "itsdangerous>=2.2.0",
    "pymongo>=4.16.0",
    "geoip2>=5.2.0",
    "httpagentparser>=1.9.9",
    "click>=8.3.2",
    "python-ldap>=3.4.4,<4",
    "jsonschema>=4.26.0",
    "backports-datetime-fromisoformat>=2.0.3",
    "six>=1.16.0,<2",
    "requests>=2.33.1",
    "backports_datetime_fromisoformat>=2.0.3",
    "segno>=1.6.1,<2",
    "pillow>=12.2.0",
    "argon2-cffi>=25.1.0",
    "MarkupSafe>=3.0.3",
    "mkdocs>=1.6.1",
]

[project.urls]
Repository = "https://github.com/oss/shrunk"

[tool.uv]

[tool.uv.build-backend]
module-root = ""
source-exclude = [
    "shrunk/config.py",
    "shrunk/test-config.py",
]
source-include = [
    "shrunk/**/*.py",
    "shrunk/static/img/*.ico",
    "shrunk/static/img/*.png",
    "shrunk/static/dist/*.js",
    "shrunk/static/dist/*.css",
    "shrunk/static/dist/*.html",
    "shrunk/templates/*.html",
    "shrunk/static/webpack-stats.json/**",
]
wheel-exclude = [
    "shrunk/config.py",
    "shrunk/test-config.py",
]

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "black>=26.3.1",
    "flake8>=7.3.0",
    "flake8-commas>=4.0.0",
    "flake8-formatter-junit-xml>=0.0.6",
    "flake8-pyproject>=1.2.4",
    "flake8-pytest-style>=2.2.0",
    "flake8-quotes>=3.4.0",
    "mypy>=1.20.2",
    "pylint>=4.0.5",
    "pylint-flask>=0.6",
    "pylint-junit>=0.3.5",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "setuptools>=82.0.1",
    "wheel>=0.47.0",
]

[tool.mypy]
ignore_missing_imports = true
strict_equality = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
allow_redefinition = false
pretty = true
show_column_numbers = true
show_error_context = true

[tool.pytest]
addopts = ["--cov=shrunk", "--verbose", "-m", "not slow"]
console_output_style = "count"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow",
]

[tool.flake8]
ignore = ["C812", "C813", "C814", "C815", "C816"]
max-line-length = 120
select = ["Q0", "C", "PT"]
inline-quotes = '"'
