cabal-version:       3.0

name:                add-geoip
version:             0.1.0.0
synopsis:            Add GeoIP data to shrunk database
homepage:            https://oss.rutgers.edu
license:             GPL-3.0-only
license-file:        LICENSE
author:              Peter Bandziukas
maintainer:          peb60@jla.rutgers.edu
copyright:           Copyright 2019 Peter Bandziukas
category:            Database
extra-source-files:  CHANGELOG.md

executable add-geoip
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -eventlog
  default-extensions:  OverloadedStrings
                     , ExtendedDefaultRules
                     , NamedFieldPuns
                     , RecordWildCards
  build-depends:       base ^>=4.11.0.0
                     , mongoDB ==2.5.0.0
                     , parallel ==3.2.2.0
                     , text ==1.2.3.1
                     , geoip2 ==0.3.1.1
                     , iproute ==1.7.1
                     , bson ==0.3.2.3
  hs-source-dirs:      src
  default-language:    Haskell2010
